--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,6 +28,12 @@ jobs:
           path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-maven-
+      
+      # New, robust step to remove the problematic plugin using xmlstarlet
+      - name: Install xmlstarlet and remove felix-bundle-plugin from POM
+        run: |
+          sudo apt-get update && sudo apt-get install -y xmlstarlet
+          xmlstarlet ed -L -N pom="http://maven.apache.org/POM/4.0.0" -d "/pom:project/pom:build/pom:plugins/pom:plugin[pom:groupId='org.apache.felix' and pom:artifactId='maven-bundle-plugin']" pom.xml
 
       - name: Build and analyze with Maven
         env:
