--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,9 +3,9 @@ name: Build and Analyze with Maven
 on:
   push:
     branches:
-      - main  # triggers analysis and TD reporting after merge
+      - main  # Triggered after merge into main
   pull_request:
-    types: [opened, synchronize, reopened]  # triggers analysis for PRs
+    types: [opened, synchronize, reopened]  # Triggered on PR updates
 
 jobs:
   build:
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Full history needed for SonarCloud analysis
+          fetch-depth: 0  # Required for SonarCloud
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -31,22 +31,26 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-maven-
 
+      # Compile only, skip tests and packaging
       - name: Compile project
-        run: mvn -B compile -Drat.skip=true -DskipTests
+        run: mvn -B compile -DskipTests -Drat.skip=true
 
       - name: Analyze with SonarCloud
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn -B sonar:sonar \
-          -Dsonar.projectKey=Raygama_collections-demo \
-          -Dsonar.organization=raygama \
-          -Dsonar.host.url=https://sonarcloud.io
+        run: |
+          mvn -B org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+            -Dsonar.projectKey=Raygama_collections-demo \
+            -Dsonar.organization=raygama \
+            -Dsonar.host.url=https://sonarcloud.io
 
+      # Optional: install jq for JSON parsing
       - name: Install jq
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: sudo apt-get update && sudo apt-get install -y jq
 
+      # Get latest merged PR into main
       - name: Get latest merged PR number
         id: get-pr
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
@@ -60,6 +64,7 @@ jobs:
           echo "Latest merged PR: $PR_NUMBER"
           echo "pr_number=$PR_NUMBER" >> $GITHUB_OUTPUT
 
+      # Only on push to main: call Flowise AI agent
       - name: Notify AI Agent (Flowise)
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         env:
