--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,9 +3,9 @@ name: Build and Analyze with Maven
 on:
   push:
     branches:
-      - main  # Triggered after merge into main
+      - main
   pull_request:
-    types: [opened, synchronize, reopened]  # Triggered on PR updates
+    types: [opened, synchronize, reopened]
 
 jobs:
   build:
@@ -16,7 +16,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Required for SonarCloud
+          fetch-depth: 0
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -31,13 +31,25 @@ jobs:
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: ${{ runner.os }}-maven-
 
-      # Compile only, skip tests and packaging
       - name: Compile project
         run: mvn -B compile -DskipTests -Drat.skip=true
 
-      - name: Analyze with SonarCloud
+      - name: Analyze PR with SonarCloud
+        if: github.event_name == 'pull_request'
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        run: |
+          mvn -B org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
+            -Dsonar.projectKey=Raygama_collections-demo \
+            -Dsonar.organization=raygama \
+            -Dsonar.host.url=https://sonarcloud.io \
+            -Dsonar.pullrequest.branch="${{ github.head_ref }}" \
+            -Dsonar.pullrequest.base="${{ github.base_ref }}" \
+            -Dsonar.pullrequest.key="${{ github.event.pull_request.number }}"
+
+      - name: Analyze main with SonarCloud
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: |
           mvn -B org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
@@ -45,40 +57,65 @@ jobs:
             -Dsonar.organization=raygama \
             -Dsonar.host.url=https://sonarcloud.io
 
-      # Optional: install jq for JSON parsing
-      - name: Install jq
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-        run: sudo apt-get update && sudo apt-get install -y jq
+      - name: Install GitHub CLI and jq
+        run: |
+          sudo apt-get update && sudo apt-get install -y jq gh
 
-      # Get latest merged PR into main
+      - name: Get Flowise AI Analysis for PR
+        if: github.event_name == 'pull_request'
+        id: pr_analysis
+        env:
+          FLOWISE_BEARER_TOKEN: ${{ secrets.FLOWISE_BEARER_TOKEN }}
+        run: |
+          RESPONSE=$(curl -s -X POST "https://cloud.flowiseai.com/api/v1/prediction/ae8b5cb1-b90b-4f25-9395-a839e92e2bf6" \
+            -H "Authorization: Bearer $FLOWISE_BEARER_TOKEN" \
+            -H "Content-Type: application/json" \
+            -d "{\"question\": \"Analyze a sonar issue using your knowledge!\", \"projectKey\": \"Raygama_collections-demo\", \"prNumber\": \"${{ github.head_ref }}\"}")
+          echo "$RESPONSE"
+          echo "response<<EOF" >> $GITHUB_OUTPUT
+          echo "$RESPONSE" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+      - name: Comment on Pull Request with Flowise Analysis
+        if: github.event_name == 'pull_request'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh auth setup-git
+          gh pr comment ${{ github.event.pull_request.number }} \
+            --body "${{ steps.pr_analysis.outputs.response }}"
+
       - name: Get latest merged PR number
-        id: get-pr
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        id: get-pr
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           PR_NUMBER=$(curl -s -H "Authorization: token $GITHUB_TOKEN" \
             "https://api.github.com/repos/${{ github.repository }}/pulls?state=closed&base=main" \
             | jq '[.[] | select(.merged_at != null)] | sort_by(.merged_at) | last | .number')
-
-          echo "Latest merged PR: $PR_NUMBER"
           echo "pr_number=$PR_NUMBER" >> $GITHUB_OUTPUT
 
-      # Only on push to main: call Flowise AI agent
-      - name: Notify AI Agent (Flowise)
+      - name: Get Flowise AI Analysis for merged PR
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        id: merged_analysis
         env:
           FLOWISE_BEARER_TOKEN: ${{ secrets.FLOWISE_BEARER_TOKEN }}
         run: |
-          PR_NUMBER="${{ steps.get-pr.outputs.pr_number }}"
-          JSON_BODY=$(printf '{
-            "question": "Analyze a sonar issue using your knowledge!",
-            "projectKey": "Raygama_collections-demo",
-            "prNumber": "%s"
-          }' "$PR_NUMBER")
-
-          curl https://cloud.flowiseai.com/api/v1/prediction/ae8b5cb1-b90b-4f25-9395-a839e92e2bf6 \
-            -X POST \
-            -d "$JSON_BODY" \
+          RESPONSE=$(curl -s -X POST "https://cloud.flowiseai.com/api/v1/prediction/ae8b5cb1-b90b-4f25-9395-a839e92e2bf6" \
+            -H "Authorization: Bearer $FLOWISE_BEARER_TOKEN" \
             -H "Content-Type: application/json" \
-            -H "Authorization: Bearer $FLOWISE_BEARER_TOKEN"
+            -d "{\"question\": \"Analyze a sonar issue using your knowledge!\", \"projectKey\": \"Raygama_collections-demo\", \"prNumber\": \"${{ steps.get-pr.outputs.pr_number }}\"}")
+          echo "response<<EOF" >> $GITHUB_OUTPUT
+          echo "$RESPONSE" >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+
+      - name: Create GitHub Issue for Tech Debt
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh auth login --with-token <<< "$GITHUB_TOKEN"
+          gh issue create \
+            --title "Tech Debt Analysis for PR #${{ steps.get-pr.outputs.pr_number }}" \
+            --body "${{ steps.merged_analysis.outputs.response }}"
