--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -81,9 +81,10 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          gh auth setup-git
-          gh pr comment ${{ github.event.pull_request.number }} \
-            --body "${{ steps.pr_analysis.outputs.response }}"
+          echo "$GITHUB_TOKEN" | gh auth login --with-token
+          PR_URL="https://github.com/${{ github.repository }}/pull/${{ github.event.pull_request.number }}"
+          gh pr comment "$PR_URL" --body "${{ steps.pr_analysis.outputs.response }}"
+
 
       - name: Get latest merged PR number
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
