--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -79,9 +79,14 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            // The output from Flowise is now the raw analysis text.
-            // We use toJSON() to safely embed it as a JavaScript string.
-            const analysisText = ${{ toJSON(steps.flowise-analysis.outputs.analysis) }};
+            // Use toJSON() to safely embed the output from the previous step.
+            const analysisOutputString = ${{ toJSON(steps.flowise-analysis.outputs.analysis) }};
+
+            // The output from Flowise is a JSON object represented as a string, so we parse it.
+            const flowiseResponse = JSON.parse(analysisOutputString);
+
+            // Extract the actual analysis text from the 'text' property of the Flowise response.
+            const analysisText = flowiseResponse.text;
 
             const body = `### AI Technical Debt Analysis\n\n---\n\n${analysisText}`;
             
