--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,98 +1,126 @@
-name: Build and Analyze with Maven
+name: Build, Analyze & AI Sonar Review
 
 on:
   pull_request:
     types: [opened, synchronize, reopened]
 
 jobs:
-  build:
-    name: Build and Analyze
+  analyze:
     runs-on: ubuntu-latest
-    
-    # Add this permissions block to grant write access to the token
     permissions:
-      issues: write
       pull-requests: write
+      issues: write
+
+    env:
+      SONAR_URL: https://sonarcloud.io
+      PROJECT_KEY: Raygama_collections-demo
 
     steps:
       - uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # SonarCloud needs the full history
+          fetch-depth: 0
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: 17
-          distribution: 'temurin'
+          distribution: temurin
 
-      - name: Cache Maven packages
+      - name: Cache Maven & Sonar caches
         uses: actions/cache@v3
         with:
-          path: ~/.m2/repository
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-maven-
-      
-      # Step 1: Compile the code without running tests or packaging
-      - name: Compile project
-        run: mvn -B compile -Drat.skip=true -DskipTests
+          path: |
+            ~/.m2/repository
+            ~/.sonar/cache
+          key: ${{ runner.os }}-maven-sonar-${{ hashFiles('**/pom.xml') }}
 
-      # Step 2: Run the SonarCloud analysis on the compiled code
-      - name: Analyze with SonarCloud
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      - name: Compile and SonarCloud Scan
         run: |
-          mvn -B org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
-            -Dsonar.projectKey=Raygama_collections-demo \
+          mvn -B compile -Drat.skip=true -DskipTests
+          mvn -B verify sonar:sonar \
+            -Dsonar.projectKey=${{ env.PROJECT_KEY }} \
             -Dsonar.organization=raygama \
-            -Dsonar.host.url=https://sonarcloud.io
+            -Dsonar.host.url=${{ env.SONAR_URL }} \
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }} \
+            -Dsonar.pullrequest.key=${{ github.event.pull_request.number }} \
+            -Dsonar.pullrequest.branch=${{ github.event.pull_request.head.ref }} \
+            -Dsonar.scm.revision=${{ github.event.pull_request.head.sha }}
 
-      - name: Get AI Analysis from Flowise
-        id: flowise-analysis
-        if: success()
+      - name: Install jq & GitHub CLI
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jq gh
+
+      - name: Get PR Changed Files
+        id: files
+        run: |
+          gh auth setup-git
+          gh pr diff --name-only > files.txt
+          jq -R -s -c 'split("\n")[:-1]' files.txt > files.json
+          echo "::set-output name=list::$(cat files.json)"
+
+      - name: Get Sonar Issues for PR
+        id: sonar
+        run: |
+          curl -s -G "${{ env.SONAR_URL }}/api/issues/search" \
+            --data-urlencode "componentKeys=${{ env.PROJECT_KEY }}" \
+            --data-urlencode "pullRequest=${{ github.event.pull_request.number }}" \
+            -H "Authorization: Bearer ${{ secrets.SONAR_TOKEN }}" \
+          > issues.json
+          echo "::set-output name=data::$(jq -c '.issues' issues.json)"
+
+      - name: Build Context Snippets
+        id: snippets
+        run: |
+          echo "[]" > all.json
+          for issue in $(echo "${{ steps.sonar.outputs.data }}" | jq -c '.[]'); do
+            fp=$(echo "$issue" | jq -r '.component' | sed 's/^[^:]*://')
+            ln=$(echo "$issue" | jq -r '.line')
+            snip=""
+            if [ -f "$fp" ] && [ "$ln" != "null" ]; then
+              start=$((ln - 5)); [ $start -lt 1 ] && start=1
+              end=$((ln + 5))
+              snip=$(sed -n "${start},${end}p" "$fp" | sed 's/"/\\"/g' | sed ':a;N;$!ba;s/\n/\\n/g')
+            fi
+            entry=$(jq -n \
+              --arg key "$(echo $issue | jq -r '.key')" \
+              --arg file "$fp" \
+              --arg line "$ln" \
+              --arg snip "$snip" \
+              '{key,file,line,snippet: $snip}')
+            jq ". += [ $entry ]" all.json > a2 && mv a2 all.json
+          done
+          echo "::set-output name=data::$(cat all.json)"
+
+      - name: Send to Flowise AI
+        id: flowise
         env:
           FLOWISE_BEARER_TOKEN: ${{ secrets.FLOWISE_BEARER_TOKEN }}
         run: |
-          JSON_BODY=$(printf '{
-            "question": "Analyze a sonar issue using your knowledge!",
-            "overrideConfig": {
-              "projectKey": "Raygama_collections-demo",
-              "prNumber": "%s"
-            }
-          }' "${{ github.event.pull_request.number }}")
-          
-          ANALYSIS_RESULT=$(curl -s https://cloud.flowiseai.com/api/v1/prediction/ae8b5cb1-b90b-4f25-9395-a839e92e2bf6 \
-               -X POST \
-               -d "$JSON_BODY" \
-               -H "Content-Type: application/json" \
-               -H "Authorization: Bearer $FLOWISE_BEARER_TOKEN")
-          
-          # Use a unique delimiter to safely handle multi-line output
-          EOF=$(openssl rand -hex 16)
-          echo "analysis<<$EOF" >> "$GITHUB_OUTPUT"
-          echo "$ANALYSIS_RESULT" >> "$GITHUB_OUTPUT"
-          echo "$EOF" >> "$GITHUB_OUTPUT"
+          ISSUES=$(cat <<<"${{ steps.snippets.outputs.data }}")
+          JSON=$(jq -n \
+            --arg pr "${{ github.event.pull_request.number }}" \
+            --arg proj "${{ env.PROJECT_KEY }}" \
+            --argjson iss "$ISSUES" \
+            '{question:"Please analyze these Sonar issues and their code context:",prNumber:$pr,projectKey:$proj,issues:$iss}')
+          curl -s \
+            -H "Content-Type: application/json" \
+            -H "Authorization: Bearer $FLOWISE_BEARER_TOKEN" \
+            -d "$JSON" \
+            https://cloud.flowiseai.com/api/v1/prediction/ae8b5cb1-b90b-4f25-9395-a839e92e2bf6 \
+            > result.json
+          echo "::set-output name=analysis<<EOF"
+          cat result.json
+          echo "EOF"
 
-      - name: Post Analysis to Pull Request
+      - name: Comment Back on PR
         uses: actions/github-script@v6
-        if: success()
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            // Use toJSON() to safely embed the output from the previous step.
-            const analysisOutputString = ${{ toJSON(steps.flowise-analysis.outputs.analysis) }};
-
-            // The output from Flowise is a JSON object represented as a string, so we parse it.
-            const flowiseResponse = JSON.parse(analysisOutputString);
-
-            // Extract the actual analysis text from the 'text' property of the Flowise response.
-            const analysisText = flowiseResponse.text;
-
-            const body = `### AI Technical Debt Analysis\n\n---\n\n${analysisText}`;
-            
+            const res = JSON.parse(steps.flowise.outputs.analysis);
+            const text = res.text || JSON.stringify(res, null, 2);
             await github.rest.issues.createComment({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
               issue_number: context.issue.number,
-              body: body
+              body: `### 🔍 AI Sonar Analysis\n\n${text}`
             });
