--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -114,5 +114,5 @@ jobs:
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
-              body: `### 🔍 AI Sonar Analysis\n\n${text}`
+              body: `### AI Sonar Analysis\n\n${text}`
             });
