--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -51,6 +51,8 @@ jobs:
 
       - name: Get PR changed files
         id: files
+        env:
+          GH_TOKEN : ${{ github.token }}
         run: |
           gh pr diff --name-only > changed.txt
           jq -R -s -c 'split("\n")[:-1]' changed.txt > changed.json
