--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -108,10 +108,12 @@ jobs:
 
       - name: Comment on PR
         uses: actions/github-script@v6
+        env:
+          ANALYSIS_JSON: ${{ steps.flowise.outputs.analysis }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const analysisJson = `${{ steps.flowise.outputs.analysis }}`;
+            const analysisJson = process.env.ANALYSIS_JSON;
             const resp = JSON.parse(analysisJson);
             const text = resp.text || JSON.stringify(resp, null, 2);
             await github.rest.issues.createComment({
