--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -106,6 +106,11 @@ jobs:
           cat flow.json >> "$GITHUB_OUTPUT"
           echo "EOF" >> "$GITHUB_OUTPUT"
 
+      - name: Debug flow.json
+        run: |
+          echo "Flowise JSON output:"
+          cat flow.json || echo "[empty]"
+
       - name: Comment on PR
         uses: actions/github-script@v6
         env:
@@ -113,8 +118,9 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const analysisJson = process.env.ANALYSIS_JSON;
-            const resp = JSON.parse(analysisJson);
+            console.log("RAW analysis JSON:", process.env.ANALYSIS_JSON);
+            const resp = JSON.parse(process.env.ANALYSIS_JSON);
+            console.log("Parsed response:", resp);
             const text = resp.text || JSON.stringify(resp, null, 2);
             await github.rest.issues.createComment({
               owner: context.repo.owner,
