--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -113,14 +113,16 @@ jobs:
 
       - name: Comment on PR
         uses: actions/github-script@v6
-        env:
-          ANALYSIS_JSON: ${{ steps.flowise.outputs.analysis }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            console.log("RAW analysis JSON:", process.env.ANALYSIS_JSON);
-            const resp = JSON.parse(process.env.ANALYSIS_JSON);
-            console.log("Parsed response:", resp);
+            const raw = ` ${{ steps.flowise.outputs.analysis }} `;
+            let resp;
+            try {
+              resp = JSON.parse(raw);
+            } catch (e) {
+              core.setFailed(`Invalid JSON from Flowise: ${e.message}`);
+            }
             const text = resp.text || JSON.stringify(resp, null, 2);
             await github.rest.issues.createComment({
               owner: context.repo.owner,
@@ -128,3 +130,4 @@ jobs:
               issue_number: context.issue.number,
               body: `### AI Sonar Analysis\n\n${text}`
             });
+
